k8s/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: workshop
spec:
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
  selector:
   role: frontend
